external-crates/move/crates/move-compiler/tests/move_check/expansion/use_struct_tparam_shadows.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
   ┌─ tests/move_check/expansion/use_struct_tparam_shadows.move:12:9
   │
11 │     fun foo<S>(x: S): 0x2::X::S {
   │                   -   --------- Expected: '0x2::X::S'
   │                   │    
   │                   Given: 'S'
12 │         x
   │         ^ Invalid return expression
